test/ui/test/parsing/invalid-attribute-body.stderr
error[E010]: found ‘[’ but expected word or ‘(’
  ┌─ ${TEST_FOLDER}/parsing/invalid-attribute-body.lushui:1:1
  │
1 │ @[attempt] to try something new
  │ ─ while parsing this attribute starting here
  │
  ├─ ${TEST_FOLDER}/parsing/invalid-attribute-body.lushui:1:2
  │
1 │ @[attempt] to try something new
  │  ═ unexpected token

error: aborting due to previous error

