test/ui/test/parsing/invalid-attribute-body.lushui
@[attempt] to try something new

